<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity$SettingsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="#6441a5"
                    android:text="@string/settings_video_headline"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/qualitySetting"
                    android:orientation="vertical"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:textColor="@color/abc_primary_text_material_light"
                        android:textSize="@dimen/abc_text_size_medium_material"
                        android:text="@string/settings_video_type_headline"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textQualitySetting"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text=""/>
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="#FFCCCCCC"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/preferredQualitySetting"
                    android:orientation="vertical"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:background="?android:attr/selectableItemBackground">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:textColor="@color/abc_primary_text_material_light"
                        android:textSize="@dimen/abc_text_size_medium_material"
                        android:text="@string/settings_video_quality_headline"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textPreferredQualitySetting"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text=""/>
                </LinearLayout>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:background="@drawable/gradient_top_soft"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="20dp"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="#6441a5"
                    android:text="@string/settings_twitch_headline"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/settingsLoginStatus"
                    android:orientation="vertical"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:clickable="true"
                    android:background="?android:attr/selectableItemBackground">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/settingsLoginStatusHeadline"
                            android:layout_marginEnd="5dp"
                            android:textColor="@color/abc_primary_text_material_light"
                            android:textSize="@dimen/abc_text_size_medium_material"
                            android:text="@string/settings_twitch_status_headline"/>

                        <ImageView
                            android:layout_width="22sp"
                            android:layout_height="wrap_content"
                            android:id="@+id/loginStatusIcon"
                            android:layout_toEndOf="@+id/settingsLoginStatusHeadline"
                            android:layout_alignBottom="@id/settingsLoginStatusHeadline"
                            android:layout_alignTop="@id/settingsLoginStatusHeadline"
                            android:padding="3sp"
                            android:adjustViewBounds="true"/>
                    </RelativeLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textLoginStatus"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text=""/>
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="#FFCCCCCC"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/usernameSetting"
                    android:orientation="vertical"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/settingsUsernameTitle"
                            android:layout_marginEnd="5dp"
                            android:textColor="@color/abc_primary_text_material_light"
                            android:textSize="@dimen/abc_text_size_medium_material"
                            android:text="@string/settings_username_headline"/>

                        <ImageView
                            android:layout_width="22sp"
                            android:layout_height="wrap_content"
                            android:id="@+id/usernameStatusIcon"
                            android:layout_toEndOf="@+id/settingsUsernameTitle"
                            android:layout_alignBottom="@+id/settingsUsernameTitle"
                            android:layout_alignTop="@+id/settingsUsernameTitle"
                            android:padding="3sp"
                            android:src="@drawable/ic_login_auth"
                            android:adjustViewBounds="true"/>

                        <ProgressBar
                            android:layout_width="22sp"
                            android:layout_height="wrap_content"
                            android:id="@+id/usernameUpdateProgress"
                            android:layout_alignBottom="@+id/settingsUsernameTitle"
                            android:layout_alignTop="@+id/settingsUsernameTitle"
                            android:layout_toEndOf="@+id/settingsUsernameTitle"
                            android:padding="3sp"
                            android:visibility="gone"/>
                        </RelativeLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textUsernameSetting"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text=""/>
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="#FFCCCCCC"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/twitchLoginSetting"
                    android:orientation="vertical"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:textColor="@color/abc_primary_text_material_light"
                        android:textSize="@dimen/abc_text_size_medium_material"
                        android:text="@string/settings_fresh_login_headline"/>

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="#FFCCCCCC"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/refreshTokenSetting"
                    android:orientation="vertical"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:textColor="@color/abc_primary_text_material_light"
                        android:textSize="@dimen/abc_text_size_medium_material"
                        android:text="@string/settings_refresh_token_headline"/>

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:background="@drawable/gradient_top_soft"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="20dp"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="#6441a5"
                    android:text="@string/settings_general_ui_headline"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/thumbnailSetting"
                    android:orientation="vertical"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:textColor="@color/abc_primary_text_material_light"
                        android:textSize="@dimen/abc_text_size_medium_material"
                        android:text="@string/settings_thumbnail_quality_headline"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textThumbnailQuality"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text=""/>
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="#FFCCCCCC"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/defaultHomeSetting"
                    android:orientation="vertical"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:textColor="@color/abc_primary_text_material_light"
                        android:textSize="@dimen/abc_text_size_medium_material"
                        android:text="@string/settings_default_home"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textDefaultHome"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text=""/>
                </LinearLayout>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:background="@drawable/gradient_top_soft_complete"/>


        </LinearLayout>
    </ScrollView>
</LinearLayout>